<resources>
    <string name="app_name">Smart Pan</string>
    <string name="title_home">Recettes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>

    <string name="error_login">Erreur de Connexion</string>
    <string name="loading">Chargement ...</string>
    <string name="error_form">Veuillez remplir tous les champs</string>
    <string name="error_cred">Email ou Mot de passe incorrect</string>
    <string name="twitterUsername">\@leafcorp</string>
    <string name="username">Username</string>
    <string name="label_label">Libellé</string>
    <string name="label_duration">Durée</string>
    <string name="label_image">Image</string>
    <string name="label_is_private">Recette privée</string>
    <string name="label_recipe_type">Type de recette</string>
    <string name="label_user">Utilisateur</string>
    <string name="label_save">Enregistrer</string>
    <string name="label_browse">Parcourir</string>
    <string name="label_add_recipe">Créer votre propre recette</string>
    <string name="add_ingredient">Ajouter un ingrédient</string>
    <string name="list_personnal_recipes">Mes recettes</string>
    <string name="add_prerequisite">Ajouter un prérequis</string>
    <string name="validate_recipe">Valider la recette</string>
    <string name="add_steps">Ajouter des étapes</string>
    <string name="label_create_own_recipe">Créer ma recette</string>
    <string name="label_shopping_list">Liste de courses</string>
    <string name="label_send_message">Envoyer</string>

</resources>
