<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="86dp"
            app:srcCompat="@drawable/steps" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nouvelle étape de recette"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etLabelStep"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_label"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTypeRecipe"
            app:layout_constraintTop_toTopOf="@+id/rlHeader"
            app:layout_constraintVertical_bias="0.307" />

        <EditText
            android:id="@+id/etDurationStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_duration"
            android:inputType="numberSigned" />
        <Button
            android:id="@+id/btnSaveStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_save" />
    </LinearLayout>



</LinearLayout>